<resources>
    <string name="app_name">TDX</string>
    <string name="action_settings">Settings</string>
    <string name="importing_artist">Importing Artist…</string>
    <string name="artist_cover">Artist Cover</string>
    <string name="textViewProgress">Progress: 0/0</string>
    <string name="imageViewArtistCoverDesc">Image of artist</string>
    <string name="fabSelectFolder">Import Folder (Metadata)</string>
    <string name="statusTextView">Press the folder icon to start import</string>
    <string name="buttonSaveArtist">Save Artist</string>
    <string name="fabMenu">Menu</string>
    <string name="button_open_discography">Discography</string>
    <string name="editTextArtist">Search for an artist</string>
    <string name="textViewname">Artist Name</string>
    <string name="textViewAlbumTitle">Album Title</string>
    <string name="textViewrelease_date">Release Date</string>
    <string name="searchViewArtists">Search for an artist…</string>
    <string name="general_settings">Fetch-Related Settings</string>
    <string name="intervalInput">Fetch Interval Frequency</string>
    <string name="releaseAgeLabel">Notifications for releases within the last 4 weeks</string>
    <string name="futureReleaseMonthsLabel">Notifications for releases within the next 4 months</string>
    <string name="fetchSettings">Update interval settings</string>
    <string name="BatteryNetwork">Battery and Network</string>
    <string name="BatteryRestrictions">Battery Restrictions</string>
    <string name="SelectNetworkType">Select Network Type</string>
    <string name="BackupandRestore">Backup and Restore</string>
    <string name="BackupData">Backup Data</string>
    <string name="RestoreData">Restore Data</string>
    <string name="Noartistselected">No artist selected.</string>
    <string name="SearchHistory">Search History</string>
    <string name="cancel">Cancel</string>
    <string name="no_releases_found_for_artist">No releases found for %1$s.</string>
    <string name="no_search_history_found">No search history found.</string>
    <string name="tutorial_main_menu_title">Main menu</string>
    <string name="tutorial_main_menu_message">Tap here to open the menu and see more options.</string>
    <string name="tutorial_saved_artists_title">Saved artists</string>
    <string name="tutorial_saved_artists_message">Tap here to view your saved artists, including their latest releases.</string>
    <string name="tutorial_settings_title">Settings</string>
    <string name="tutorial_settings_message">Tap here to manage the app settings such as notification intervals, and so on.</string>
    <string name="tutorial_select_folder_title">Select Folder</string>
    <string name="tutorial_select_folder_message">Tap here to select a folder for importing files or managing content.</string>
    <string name="tutorial_completed_message">Tutorial completed! Have lots of fun with the app.</string>
    <string name="tutorial_aborted_message">Tutorial aborted.</string>
    <string name="please_enter_artist_name">Please enter an artist name.</string>
    <string name="network_type_not_available">Selected network type is not available. Please check your connection.</string>
    <string name="no_similar_artists_found">No similar artists found.</string>
    <string name="error_loading_artists">Error loading artists.</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="artist_saved">%1$s saved!</string>
    <string name="artist_removed">%1$s removed from saved artists!</string>
    <string name="fetch_interval_description">Here you can set how often new releases should be fetched.</string>
    <string name="release_age_title">Release-Age</string>
    <string name="release_age_description">With this slider you can define how old releases can be to receive notifications (in weeks).</string>
    <string name="delayed_fetching_title">Delayed fetching</string>
    <string name="delayed_fetching_description">Here you can set how many seconds should elapse between fetching.</string>
    <string name="retry_attempt_title">Retry Attempt</string>
    <string name="retry_attempt_description">Specify how long the app should wait after an error before it tries again (in minutes).</string>
    <string name="create_backup_title">Create backup</string>
    <string name="create_backup_description">Tap here to create a backup of your saved data.</string>
    <string name="restore_data_title">Restore data</string>
    <string name="restore_data_description">Tap here to restore a previously created backup.</string>
    <string name="settings_tutorial_completed">Settings tutorial completed!</string>
    <string name="settings_tutorial_aborted">Settings tutorial aborted.</string>
    <string name="fetch_interval_set">Fetch interval set to %1$d minutes</string>
    <string name="invalid_interval_value">The interval must be at least 15 minutes.</string>
    <string name="fetch_delay_set">Fetch delay set to %1$d seconds</string>
    <string name="invalid_delay_value">The delay must be between 1 and 60 seconds.</string>
    <string name="retry_after_failure_set">Retry after failure set to %1$d minutes</string>
    <string name="invalid_retry_value">Invalid retry value.</string>
    <string name="battery_optimization_ignored">Battery optimization is already ignored for this app.</string>
    <string name="select_network_type_title">Select Network Type</string>
    <string name="network_type_wifi">Wi-Fi Only</string>
    <string name="network_type_mobile">Mobile Data Only</string>
    <string name="network_type_any">Any</string>
    <string name="notify_releases_within_weeks">Notify releases within the last %1$d weeks</string>
    <string name="artist_deleted">%1$s has been deleted.</string>
    <string name="deletion_only_in_artist_view">Deletion is only possible in the artist view.</string>
    <string name="select_view_title">Select view</string>
    <string name="select_view_description">Choose here whether you want to display saved artists or their latest releases.</string>
    <string name="saved_artists_title">Saved artists</string>
    <string name="saved_artists_description">Here you can see all saved artists with their latest releases. Tap on an artist to delete it.</string>
    <string name="artist_picture_title">Artist Picture</string>
    <string name="artist_picture_description">Tap on an artist\'s picture to view their complete discography.</string>
    <string name="newest_releases_title">Newest releases</string>
    <string name="newest_releases_description">Select \'Latest Releases\' from the dropdown to see the latest releases from all saved artists.</string>
    <string name="tutorial_completed_artists">Tutorial completed! Have fun with the app.</string>
    <string name="tutorial_canceled_artists">Tutorial canceled.</string>
    <string name="latest_releases_title">Latest releases</string>
    <string name="latest_releases_description">Here you can see the latest releases of all saved artists. Tap on a release to view details such as the track list.</string>
    <string name="tutorial_completed_releases">Tutorial completed! Have fun discovering the releases.</string>
    <string name="tutorial_aborted_releases">Tutorial aborted.</string>
    <string name="importing_status">Importing… Please wait.</string>
    <string name="press_folder_icon">Press folder icon to start import</string>
    <string name="important_warning_title">⚠️ Important Warning ⚠️</string>
    <string name="importing_feature_message">
        You are about to enter the music importing feature of the application! 🎶✨\n\n
        This feature will scan your selected folder for audio files, extracting relevant details such as artist names and album titles, and saving them to your library. 📚💾\n\n
        Please be aware that this feature is currently in beta. To avoid the risk of being temporarily blocked by Deezer, use a VPN while accessing this feature. Alternatively, you can add artists manually if you prefer not to take that risk.\n\n
        Are you ready to proceed? 🚀
    </string>
    <string name="proceed_with_caution">Proceed with Caution! 🎉</string>
    <string name="cancelE">Cancel 😱</string>
    <string name="selected_folder">Selected folder: %1$s</string>
    <string name="no_folder_selected">No folder selected</string>
    <string name="preparing_import">Preparing import…</string>
    <string name="loading_artist">Loading artist…</string>
    <string name="import_completed">Import completed</string>
    <string name="import_artists">Import artists</string>
    <string name="all_artists_imported">All artists successfully imported.</string>
    <string name="progress_status">Progress: %1$d%% - %2$s</string>
    <string name="select_network_type_description">Choose your preferred network type for fetching updates.</string>
    <string name="request_battery_optimization_title">Battery Optimization</string>
    <string name="request_battery_optimization_description">Request to ignore battery optimizations for better performance.</string>
    <string name="importing_message">Importing… Please wait.</string>
    <string name="press_folder_icon_message">Press folder icon to start import</string>
    <string name="warning_title">⚠️ Warning ⚠️</string>
    <string name="import_warning_message">You are about to import a folder. Please note that you use this function at your own risk. 😬\n\n• This feature is an Experimental Feature and may result in your IP address being blocked by Deezer. 🤡\n• It is recommended to use a VPN. 🕵️‍♂️</string>
    <string name="proceed_button">Proceed</string>
    <string name="cancel_button">Cancel</string>
    <string name="import_progress_title">Import Progress</string>
    <string name="selected_folder_message">Selected Folder: %1$s</string>
    <string name="import_progress_description">Progress notifications for importing artists</string>
    <string name="progress_message">Progress: %1$d%% (%2$d/%3$d)</string>
    <string name="progress_artist_message">Progress: %1$d%% - %2$s</string>
    <string name="import_completed_message">Import completed!</string>
    <string name="fetching_releases_title">Fetching Releases</string>
    <string name="fetching_releases_text">Fetching new releases from your saved artists.</string>
    <string name="release_type_album">Album</string>
    <string name="release_type_single">Single</string>
    <string name="release_type_ep">EP</string>
    <string name="release_type_default">Release</string>
    <string name="notification_new_release_title_album">New %2$s from %1$s</string>
    <string name="notification_new_release_title_single">New %2$s from %1$s</string>
    <string name="notification_new_release_title_ep">New %2$s from %1$s</string>
    <string name="notification_new_release_title_default">New %2$s from %1$s</string>
    <string name="notification_release_text">%1$s released %2$s</string>
    <string name="notification_channel_fetch">Background Fetch Notifications</string>
    <string name="notification_channel_release">New Release Notifications</string>
    <string name="open_matrix_chat">Open Matrix</string>
    <string name="open_github_repository">Open GitHub</string>
    <string name="chat_room_and_github_repo">Chat Room and Github Repo:</string>
    <string name="experimental_settings">Advanced / Experimental Options</string>
    <string name="FetchDelay">Fetch Delay (in seconds)</string>
    <string name="enable_itunes_support">Enable iTunes support?</string>
    <string name="auto_load_releases_label">Show recent releases on startup</string>
    <string name="restart_required_note">* Manual app restart required to apply changes.</string>
    <string name="button_change_icon">Change App Icon</string>
    <string name="tweaks">Customizations &amp; Extras</string>
    <string name="button_notification_settings">Hide Work-Status</string>
</resources>