<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        tools:ignore="ExtraText">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_settings"
            android:textSize="16sp"
            android:textColor="@color/md_theme_onBackground"
            android:layout_marginBottom="12dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/intervalInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/intervalInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_auto_load_releases"
            style="@style/Widget.Material3.CompoundButton.Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingVertical="12dp"
            android:text="@string/auto_load_releases_label" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart_required_note"
            android:textSize="12sp"
            android:textColor="@color/md_theme_onBackground"
            android:alpha="0.6"
            android:layout_marginBottom="16dp" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/releaseAgeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/releaseAgeLabel"
            android:layout_marginBottom="8dp"
            android:textSize="16sp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/releaseAgeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:value="4"
            android:valueFrom="2"
            android:valueTo="8"
            android:stepSize="1"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/futureReleaseMonthsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/notify_future_releases_months"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <com.google.android.material.slider.Slider
            android:id="@+id/futureReleaseMonthsSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="0.0"
            android:valueTo="12.0"
            android:stepSize="1.0"
            app:labelBehavior="gone"
            android:layout_marginBottom="16dp" />


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fetchSettings"
            android:textSize="16sp"
            android:textColor="@color/md_theme_onBackground"
            android:layout_marginBottom="12dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/FetchDelay">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/delayInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginBottom="12dp"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/Network"
            android:textColor="@color/md_theme_onBackground"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_select_network_type"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/SelectNetworkType"
        app:icon="@drawable/ic_network"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        tools:ignore="TextContrastCheck" />
    </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BackupandRestore"
            android:textSize="16sp"
            android:textColor="@color/md_theme_onBackground"
            android:layout_marginBottom="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_backup"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/BackupData"
                app:icon="@drawable/ic_backup"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_restore"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/RestoreData"
                app:icon="@drawable/ic_restore"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/tweaks"
            android:textColor="@color/md_theme_onBackground"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_change_icon"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/button_change_icon"
                app:icon="@drawable/ic_appicon_changer"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNotificationSettings"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/button_notification_settings"
                app:icon="@drawable/ic_hide"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:alpha="0.7"
            android:text="@string/experimental_settings"
            android:textColor="@color/md_theme_onBackground"
            android:textSize="16sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_itunes_support"
            style="@style/Widget.Material3.CompoundButton.Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:alpha="0.8"
            android:checked="false"
            android:paddingVertical="12dp"
            android:text="@string/enable_itunes_support"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</ScrollView>